# clang-tool-chain

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONE.md  EMSCRIPTEN_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  IWYU_AUTO_DEPLOYMENT.md  IWYU_BUILD_METHODS.md  IWYU_BUILD_QUICK_START.md  IWYU_GITHUB_ACTIONS_GUIDE.md  IWYU_MACOS_FIX_SUMMARY.md  LICENSE  LOOP.md  LOOP_MAC.md  QUICKSTART.md  README.md  SECURITY.md  TASK.md  clean  lint  pyproject.toml  requirements.testing.txt  task.md  test  test_iwyu.cpp  test_parallel_comparison.py  test_parallel_real.py  test_parallel_verbose.py
.agent_task/: ARCHIVE_INTEGRATION_CHECKLIST.md  ITERATION_1.md  ITERATION_10.md  ITERATION_11.md  ITERATION_12.md  ITERATION_13.md  ITERATION_14.md  ITERATION_15.md  ITERATION_16.md  ITERATION_17.md  ITERATION_2.md  ITERATION_3.md  ITERATION_4.md  ITERATION_5.md  ITERATION_6.md  ITERATION_6_CHECKLIST.md  ITERATION_7.md  ITERATION_8.md  ITERATION_9.md  LOOP.md  LOOP_INSTALL_LINUX.md  NEXT_ITERATION.md  NEXT_ITERATION_PLAN.md  PACKAGING_STRATEGY_LINUX.md  UPDATE.md  WORKFLOW_TRIGGER_GUIDE.md  WORKFLOW_USAGE.md  info.json  log.txt
.claude/: settings.json  settings.local.json
.claude/hooks/: lint-on-save.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: binary_issue.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/docker/: README.md  test-arm64.sh
.github/workflows/: README.md  auto-release.yml  build-clang-archives-linux.yml  build-clang-extra-macos-x86.yml  build-emscripten-macos.yml  build-iwyu-macos-homebrew.yml  build-iwyu-macos.yml  build-lldb-archive-darwin-x86.yml  build-lldb-archives-windows.yml  build-llvm-macos-arm.yml  build-llvm-macos-x86.yml  build-nodejs-archives.yml  deploy-iwyu-macos-auto.yml  lint.yml  release.yml  test-binary-utils-linux-arm.yml  test-binary-utils-linux-x86.yml  test-binary-utils-macos-arm.yml  test-binary-utils-macos-x86.yml  test-binary-utils-win.yml  test-clang-linux-arm.yml  test-clang-linux-x86.yml  test-clang-macos-arm.yml  test-clang-macos-x86.yml  test-clang-sccache-linux-arm.yml  test-clang-sccache-linux-x86.yml  test-clang-sccache-macos-arm.yml  test-clang-sccache-macos-x86.yml  test-clang-sccache-win.yml  test-clang-win.yml  test-cosmocc-linux-arm.yml  test-cosmocc-linux-x86.yml  test-cosmocc-macos-arm.yml  test-cosmocc-macos-x86.yml  test-cosmocc-valgrind-linux-x86.yml  test-cosmocc-win.yml  test-emscripten-linux-arm.yml  test-emscripten-linux-x86.yml  test-emscripten-macos-arm.yml  test-emscripten-macos-x86.yml  (+42 more)
IWYU/: DOWNLOAD_SUMMARY.md
docker/: Dockerfile.arm64-test  Dockerfile.iwyu-arm64-builder  Dockerfile.iwyu-deps-collector  Dockerfile.repro-missing-headers  Dockerfile.valgrind-packager  README.md  build-iwyu-arm64.sh  collect-deps-arm64.sh  collect-iwyu-deps.sh  test-arm64.sh
docs/: ACKNOWLEDGMENTS.md  ADDITIONAL_UTILITIES.md  ADVANCED.md  ARCHITECTURE.md  BINARY_UTILS.md  BUILD_UTILITIES.md  CALLGRIND.md  CICD_INTEGRATION.md  CLANG_LLVM.md  CONFIGURATION.md  CONTRIBUTING.md  COSMOCC.md  DIRECTIVES.md  DLL_DEPLOYMENT.md  DLL_DETECTOR_ARCHITECTURE.md  EMSCRIPTEN.md  ENVIRONMENT_VARIABLES.md  EXAMPLES.md  EXECUTABLE_SCRIPTS.md  FAQ.md  FEATURES.md  FORMAT_LINT.md  GETTING_STARTED.md  HOW_IT_WORKS.md  INSTALLATION.md  IWYU.md  IWYU_ARM64_FIX_GUIDE.md  LIBUNWIND.md  LICENSE_INFO.md  LINKER_FLAG_TRANSLATION.md  LLDB.md  MAINTAINER.md  MANAGEMENT_CLI.md  NODEJS.md  PARALLEL_DOWNLOADS.md  PERFORMANCE.md  PLATFORM_SUPPORT.md  QUICKSTART.md  SCCACHE.md  SECURITY.md  (+9 more)
docs/analysis/: current_integration.md  linux_shared_library.md  macos_dylib.md  windows_dll_deployment.md
docs/design/: shared_library_deployment.md
docs/proposals/: INLINED_DIRECTIVES.md
downloads/: README.md
downloads/clang/darwin/: manifest.json
downloads/clang/linux/: manifest.json
downloads/clang/win/: manifest.json
downloads/darwin/: manifest.json
downloads/darwin/arm64/: manifest.json  (+2 more)
downloads/linux/: manifest.json
downloads/win/: manifest.json
examples/: dll_detector_usage.py  hello.c  hello.cpp  inline_cpp_test.cpp  inline_cpp_uv.cpp
examples/inlined_directives/: README.md  cross_platform.cpp  math_intensive.cpp  pthread_hello.cpp  simple_c.c
iwyu-artifacts/iwyu-darwin-arm64-homebrew/: iwyu-0.25-darwin-arm64.tar.zst
iwyu-artifacts/iwyu-darwin-x86_64-homebrew/: iwyu-0.25-darwin-x86_64.tar.zst
lint_plugins/flake8/: keyboard_interrupt_checker.py
scripts/: lint_no_space_join_args.py
src/clang_tool_chain/: __init__.py  __version__.py  archive.py  archive_cache.py  checksums.py  cli.py  cli_args.py  cli_parsers.py  component_db.py  downloader.py  env_breadcrumbs.py  env_utils.py  fetch.py  installer.py  interrupt_utils.py  llvm_versions.py  logging_config.py  manifest.py  parallel_download.py  path_utils.py  paths.py  permissions.py  profile.py  sccache_runner.py  settings_warnings.py  wrapper.py  zccache_shim.py
tests/: conftest.py  test_archive_permissions.py  test_asan_linking.py  test_asan_options_injection.py  test_asan_stack_trace_symbolization.py  test_asan_windows_detect_leaks.py  test_binary_utils.py  test_bug_asan_runtime_search.py  test_build_run.py  test_build_run_cached_integration.py  test_build_tools.py  test_callgrind.py  test_checksums.py  test_clang_query.py  test_cli.py  test_compiler_verification.py  test_cosmocc.py  test_dependency_deployment.py  test_deployment_factory.py  test_deployment_sccache.py  test_directives.py  test_dll_deployment.py  test_dll_detector.py  test_dlltool.py  test_download.py  test_download_size_limits.py  test_downloader.py  test_dylib_deployment.py  test_emscripten.py  test_emscripten_archive_tools.py  test_emscripten_full_pipeline.py  test_emscripten_wasmld_patch.py  test_env_utils.py  test_execution_core_deployment.py  test_format_lint.py  test_gnu_abi.py  test_install_time_profile.py  test_integration.py  test_integration.py.disabled  test_iwyu.py  (+42 more)
tests/fixtures/: hello_world_wasm.cpp
tests/test_data/: cosmocc_valgrind_test.c  valgrind_test  valgrind_test.cpp
(+95 files in other folders)
