[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clang-tool-chain"
version = "1.0.26"
description = "Clang Tool Chain - C/C++ compilation toolchain utilities"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Zachary Vorhies", email = "" }
]
maintainers = [
    { name = "Zachary Vorhies", email = "" }
]
keywords = ["clang", "toolchain", "c", "cpp", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "fasteners>=0.19.0",
    "pyzstd>=0.16.0",
    "uv-iso-env>=1.0.0",
    "setenvironment>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "pre-commit>=3.6.0",
    "sccache>=0.7.0",
    "flake8>=7.0.0",
]
sccache = [
    "sccache>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/zackees/clang-tool-chain"
Repository = "https://github.com/zackees/clang-tool-chain"
Issues = "https://github.com/zackees/clang-tool-chain/issues"

[project.entry-points."flake8.extension"]
KBI = "lint_plugins.flake8.keyboard_interrupt_checker:KeyboardInterruptChecker"

[project.scripts]
clang-tool-chain = "clang_tool_chain.cli:main"
clang-tool-chain-test = "clang_tool_chain.cli:test_main"
# Download utilities
clang-tool-chain-fetch = "clang_tool_chain.fetch:main"
clang-tool-chain-paths = "clang_tool_chain.paths:main"
# Build utility
clang-tool-chain-build = "clang_tool_chain.wrapper:build_main"
clang-tool-chain-build-run = "clang_tool_chain.wrapper:build_run_main"
# Compilers
clang-tool-chain-c = "clang_tool_chain.wrapper:clang_main"
clang-tool-chain-cpp = "clang_tool_chain.wrapper:clang_cpp_main"
# MSVC ABI variants (Windows only)
clang-tool-chain-c-msvc = "clang_tool_chain.wrapper:clang_msvc_main"
clang-tool-chain-cpp-msvc = "clang_tool_chain.wrapper:clang_cpp_msvc_main"
# Linker and Archiver
clang-tool-chain-ld = "clang_tool_chain.wrapper:lld_main"
clang-tool-chain-ar = "clang_tool_chain.wrapper:llvm_ar_main"
# Binary Utilities
clang-tool-chain-nm = "clang_tool_chain.wrapper:llvm_nm_main"
clang-tool-chain-objdump = "clang_tool_chain.wrapper:llvm_objdump_main"
clang-tool-chain-objcopy = "clang_tool_chain.wrapper:llvm_objcopy_main"
clang-tool-chain-ranlib = "clang_tool_chain.wrapper:llvm_ranlib_main"
clang-tool-chain-strip = "clang_tool_chain.wrapper:llvm_strip_main"
clang-tool-chain-readelf = "clang_tool_chain.wrapper:llvm_readelf_main"
# Additional Tools
clang-tool-chain-as = "clang_tool_chain.wrapper:llvm_as_main"
clang-tool-chain-dis = "clang_tool_chain.wrapper:llvm_dis_main"
clang-tool-chain-format = "clang_tool_chain.wrapper:clang_format_main"
clang-tool-chain-tidy = "clang_tool_chain.wrapper:clang_tidy_main"
# sccache Integration
clang-tool-chain-sccache = "clang_tool_chain.cli:sccache_main"
clang-tool-chain-sccache-c = "clang_tool_chain.cli:sccache_c_main"
clang-tool-chain-sccache-cpp = "clang_tool_chain.cli:sccache_cpp_main"
# sccache MSVC ABI variants (Windows only)
clang-tool-chain-sccache-c-msvc = "clang_tool_chain.cli:sccache_c_msvc_main"
clang-tool-chain-sccache-cpp-msvc = "clang_tool_chain.cli:sccache_cpp_msvc_main"
# IWYU (Include What You Use)
clang-tool-chain-iwyu = "clang_tool_chain.wrapper:iwyu_main"
clang-tool-chain-iwyu-tool = "clang_tool_chain.wrapper:iwyu_tool_main"
clang-tool-chain-fix-includes = "clang_tool_chain.wrapper:fix_includes_main"
# LLDB (LLVM Debugger)
clang-tool-chain-lldb = "clang_tool_chain.wrapper:lldb_main"
clang-tool-chain-lldb-check-python = "clang_tool_chain.wrapper:lldb_check_python_main"
# Emscripten (WebAssembly compilation)
clang-tool-chain-emcc = "clang_tool_chain.wrapper:emcc_main"
clang-tool-chain-empp = "clang_tool_chain.wrapper:empp_main"
clang-tool-chain-emar = "clang_tool_chain.wrapper:emar_main"
# Emscripten + sccache (WebAssembly compilation with caching)
clang-tool-chain-sccache-emcc = "clang_tool_chain.wrapper:sccache_emcc_main"
clang-tool-chain-sccache-empp = "clang_tool_chain.wrapper:sccache_empp_main"

[tool.hatch.build.targets.wheel]
packages = ["src/clang_tool_chain"]
# Include assets directory (LLVM binaries) if it exists
# Note: assets/ should be populated before building the package
include = [
    "src/clang_tool_chain/assets/**/*",
]

# Force include lint_plugins without path rewriting
[tool.hatch.build.force-include]
"lint_plugins" = "lint_plugins"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Black configuration
[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=clang_tool_chain",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "serial: mark test to run serially (not in parallel)",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Pyright configuration
[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["**/__pycache__", "build", "dist", "tests/test_archive_permissions.py"]
extraPaths = ["scripts"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownParameterType = true
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportPrivateUsage = false
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportUninitializedInstanceVariable = false
reportCallInDefaultInitializer = false
reportUnnecessaryIsInstance = false
reportUnnecessaryCast = false
reportUnnecessaryComparison = false
reportImplicitStringConcatenation = false
reportUnusedCallResult = false