[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clang-tool-chain"
version = "1.5.3"
description = "Clang Tool Chain - C/C++ compilation toolchain utilities"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Zachary Vorhies", email = "" }
]
maintainers = [
    { name = "Zachary Vorhies", email = "" }
]
keywords = ["clang", "toolchain", "c", "cpp", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "clang-tool-chain-bins>=0.4.1",
    "zccache>=1.3.0",
    "fasteners>=0.19.0",
    "httpx>=0.27.0",
    "pyzstd>=0.16.0",
    "uv-iso-env>=1.0.0",
    "setenvironment>=1.1.0",
    "meson>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "sccache>=0.7.0",
    "flake8>=7.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "sccache>=0.7.0",
    "flake8>=7.0.0",
]
sccache = [
    "sccache>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/zackees/clang-tool-chain"
Repository = "https://github.com/zackees/clang-tool-chain"
Issues = "https://github.com/zackees/clang-tool-chain/issues"

[project.scripts]
clang-tool-chain = "clang_tool_chain.cli:main"
clang-tool-chain-test = "clang_tool_chain.cli:test_main"
# Download utilities
clang-tool-chain-fetch = "clang_tool_chain.fetch:main"
clang-tool-chain-paths = "clang_tool_chain.paths:main"
# Build utility
clang-tool-chain-build = "clang_tool_chain.wrapper:build_main"
clang-tool-chain-build-run = "clang_tool_chain.wrapper:build_run_main"
clang-tool-chain-run = "clang_tool_chain.wrapper:run_main"
# Compilers
clang-tool-chain-c = "clang_tool_chain.wrapper:clang_main"
clang-tool-chain-cpp = "clang_tool_chain.wrapper:clang_cpp_main"
# MSVC ABI variants (Windows only)
clang-tool-chain-c-msvc = "clang_tool_chain.wrapper:clang_msvc_main"
clang-tool-chain-cpp-msvc = "clang_tool_chain.wrapper:clang_cpp_msvc_main"
# Linker and Archiver
clang-tool-chain-ld = "clang_tool_chain.wrapper:lld_main"
clang-tool-chain-wasm-ld = "clang_tool_chain.wrapper:wasm_ld_main"
clang-tool-chain-ar = "clang_tool_chain.wrapper:llvm_ar_main"
# Binary Utilities
clang-tool-chain-nm = "clang_tool_chain.wrapper:llvm_nm_main"
clang-tool-chain-objdump = "clang_tool_chain.wrapper:llvm_objdump_main"
clang-tool-chain-objcopy = "clang_tool_chain.wrapper:llvm_objcopy_main"
clang-tool-chain-ranlib = "clang_tool_chain.wrapper:llvm_ranlib_main"
clang-tool-chain-strip = "clang_tool_chain.wrapper:llvm_strip_main"
clang-tool-chain-readelf = "clang_tool_chain.wrapper:llvm_readelf_main"
# Import Library Tools
clang-tool-chain-dlltool = "clang_tool_chain.wrapper:llvm_dlltool_main"
clang-tool-chain-lib = "clang_tool_chain.wrapper:llvm_lib_main"
# Def File Generation
clang-tool-chain-gendef = "clang_tool_chain.wrapper:gendef_main"
# Additional Tools
clang-tool-chain-as = "clang_tool_chain.wrapper:llvm_as_main"
clang-tool-chain-dis = "clang_tool_chain.wrapper:llvm_dis_main"
clang-tool-chain-format = "clang_tool_chain.wrapper:clang_format_main"
clang-tool-chain-tidy = "clang_tool_chain.wrapper:clang_tidy_main"
clang-tool-chain-clang-query = "clang_tool_chain.wrapper:clang_query_main"
# sccache Integration
clang-tool-chain-sccache = "clang_tool_chain.cli:sccache_main"
clang-tool-chain-sccache-c = "clang_tool_chain.cli:sccache_c_main"
clang-tool-chain-sccache-cpp = "clang_tool_chain.cli:sccache_cpp_main"
# sccache MSVC ABI variants (Windows only)
clang-tool-chain-sccache-c-msvc = "clang_tool_chain.cli:sccache_c_msvc_main"
clang-tool-chain-sccache-cpp-msvc = "clang_tool_chain.cli:sccache_cpp_msvc_main"
# IWYU (Include What You Use)
clang-tool-chain-iwyu = "clang_tool_chain.wrapper:iwyu_main"
clang-tool-chain-iwyu-tool = "clang_tool_chain.wrapper:iwyu_tool_main"
clang-tool-chain-fix-includes = "clang_tool_chain.wrapper:fix_includes_main"
# LLDB (LLVM Debugger)
clang-tool-chain-lldb = "clang_tool_chain.wrapper:lldb_main"
clang-tool-chain-lldb-check-python = "clang_tool_chain.wrapper:lldb_check_python_main"
# Emscripten (WebAssembly compilation)
clang-tool-chain-emcc = "clang_tool_chain.wrapper:emcc_main"
clang-tool-chain-empp = "clang_tool_chain.wrapper:empp_main"
clang-tool-chain-emar = "clang_tool_chain.wrapper:emar_main"
clang-tool-chain-emstrip = "clang_tool_chain.wrapper:emstrip_main"
clang-tool-chain-emranlib = "clang_tool_chain.wrapper:emranlib_main"
clang-tool-chain-emnm = "clang_tool_chain.wrapper:emnm_main"
# Short-form (ctc-*) Python fallbacks for the native emtool launchers.
# When `compile-native` runs, the compiled C++ ctc-emar/ctc-emstrip/ctc-emranlib/
# ctc-emnm binaries land in the same scripts dir and shadow these on PATH.
ctc-emar = "clang_tool_chain.wrapper:ctc_emar_main"
ctc-emstrip = "clang_tool_chain.wrapper:ctc_emstrip_main"
ctc-emranlib = "clang_tool_chain.wrapper:ctc_emranlib_main"
ctc-emnm = "clang_tool_chain.wrapper:ctc_emnm_main"
# Short-form (ctc-*) Python fallbacks for the heavy WASM build tools.
# Same dispatch as `clang-tool-chain-emcc` / `clang-tool-chain-empp` /
# `clang-tool-chain-wasm-ld`, just under the short names downstream cross-files
# expect. PyPI rejects `++` in entry-point names (PEP 685), so the C++ variant
# is `ctc-em-cpp`; the compiled native launcher `ctc-em++.exe` still wins on
# PATH when `compile-native` runs.
ctc-emcc = "clang_tool_chain.commands.entry_points:ctc_emcc_main"
ctc-em-cpp = "clang_tool_chain.commands.entry_points:ctc_empp_main"
ctc-wasm-ld = "clang_tool_chain.commands.entry_points:ctc_wasm_ld_main"
# Emscripten build orchestration (cmake / make / configure drivers).
clang-tool-chain-emcmake = "clang_tool_chain.commands.entry_points:emcmake_main"
clang-tool-chain-emmake = "clang_tool_chain.commands.entry_points:emmake_main"
clang-tool-chain-emconfigure = "clang_tool_chain.commands.entry_points:emconfigure_main"
clang-tool-chain-emscons = "clang_tool_chain.commands.entry_points:emscons_main"
clang-tool-chain-embuilder = "clang_tool_chain.commands.entry_points:embuilder_main"
ctc-emcmake = "clang_tool_chain.commands.entry_points:ctc_emcmake_main"
ctc-emmake = "clang_tool_chain.commands.entry_points:ctc_emmake_main"
ctc-emconfigure = "clang_tool_chain.commands.entry_points:ctc_emconfigure_main"
ctc-emscons = "clang_tool_chain.commands.entry_points:ctc_emscons_main"
ctc-embuilder = "clang_tool_chain.commands.entry_points:ctc_embuilder_main"
# Emscripten inspection / debug helpers.
clang-tool-chain-em-config = "clang_tool_chain.commands.entry_points:em_config_main"
clang-tool-chain-emsize = "clang_tool_chain.commands.entry_points:emsize_main"
clang-tool-chain-emrun = "clang_tool_chain.commands.entry_points:emrun_main"
clang-tool-chain-emscan-deps = "clang_tool_chain.commands.entry_points:emscan_deps_main"
clang-tool-chain-emsymbolizer = "clang_tool_chain.commands.entry_points:emsymbolizer_main"
clang-tool-chain-emdwp = "clang_tool_chain.commands.entry_points:emdwp_main"
clang-tool-chain-emcoverage = "clang_tool_chain.commands.entry_points:emcoverage_main"
clang-tool-chain-emprofile = "clang_tool_chain.commands.entry_points:emprofile_main"
ctc-em-config = "clang_tool_chain.commands.entry_points:ctc_em_config_main"
ctc-emsize = "clang_tool_chain.commands.entry_points:ctc_emsize_main"
ctc-emrun = "clang_tool_chain.commands.entry_points:ctc_emrun_main"
ctc-emscan-deps = "clang_tool_chain.commands.entry_points:ctc_emscan_deps_main"
ctc-emsymbolizer = "clang_tool_chain.commands.entry_points:ctc_emsymbolizer_main"
ctc-emdwp = "clang_tool_chain.commands.entry_points:ctc_emdwp_main"
ctc-emcoverage = "clang_tool_chain.commands.entry_points:ctc_emcoverage_main"
ctc-emprofile = "clang_tool_chain.commands.entry_points:ctc_emprofile_main"
# Binaryen native binaries — direct exec, no Python wrapper.
clang-tool-chain-wasm-opt = "clang_tool_chain.commands.entry_points:wasm_opt_main"
clang-tool-chain-wasm-as = "clang_tool_chain.commands.entry_points:wasm_as_main"
clang-tool-chain-wasm-dis = "clang_tool_chain.commands.entry_points:wasm_dis_main"
clang-tool-chain-wasm-emscripten-finalize = "clang_tool_chain.commands.entry_points:wasm_emscripten_finalize_main"
clang-tool-chain-wasm-merge = "clang_tool_chain.commands.entry_points:wasm_merge_main"
clang-tool-chain-wasm-metadce = "clang_tool_chain.commands.entry_points:wasm_metadce_main"
clang-tool-chain-wasm-ctor-eval = "clang_tool_chain.commands.entry_points:wasm_ctor_eval_main"
clang-tool-chain-wasm-shell = "clang_tool_chain.commands.entry_points:wasm_shell_main"
ctc-wasm-opt = "clang_tool_chain.commands.entry_points:ctc_wasm_opt_main"
ctc-wasm-as = "clang_tool_chain.commands.entry_points:ctc_wasm_as_main"
ctc-wasm-dis = "clang_tool_chain.commands.entry_points:ctc_wasm_dis_main"
ctc-wasm-emscripten-finalize = "clang_tool_chain.commands.entry_points:ctc_wasm_emscripten_finalize_main"
ctc-wasm-merge = "clang_tool_chain.commands.entry_points:ctc_wasm_merge_main"
ctc-wasm-metadce = "clang_tool_chain.commands.entry_points:ctc_wasm_metadce_main"
ctc-wasm-ctor-eval = "clang_tool_chain.commands.entry_points:ctc_wasm_ctor_eval_main"
ctc-wasm-shell = "clang_tool_chain.commands.entry_points:ctc_wasm_shell_main"
# Emscripten + sccache (WebAssembly compilation with caching)
clang-tool-chain-sccache-emcc = "clang_tool_chain.wrapper:sccache_emcc_main"
clang-tool-chain-sccache-empp = "clang_tool_chain.wrapper:sccache_empp_main"
# Build Systems
clang-tool-chain-meson = "clang_tool_chain.wrapper:meson_main"
# Cosmopolitan (Actually Portable Executables)
clang-tool-chain-cosmocc = "clang_tool_chain.wrapper:cosmocc_main"
clang-tool-chain-cosmocpp = "clang_tool_chain.wrapper:cosmocpp_main"
# Valgrind (Memory Analysis via Docker)
clang-tool-chain-valgrind = "clang_tool_chain.wrapper:valgrind_main"
# Callgrind (Call Graph Profiler via Docker)
clang-tool-chain-callgrind = "clang_tool_chain.wrapper:callgrind_main"
# Library Deployment (post-build)
clang-tool-chain-libdeploy = "clang_tool_chain.deployment.libdeploy:main"
# Native Launcher Compilation
clang-tool-chain-compile-native = "clang_tool_chain.commands.compile_native:compile_native_main"
# ---------------------------------------------------------------------------
# Zccache-shim console scripts (Phase 4)
# New unified entry points that exec into zccache via zccache_shim. Legacy
# scripts above (e.g. clang-tool-chain-c) remain in place; Phase 6 converts
# them to deprecation forwarders.
# ---------------------------------------------------------------------------
clang-tool-chain-clang = "clang_tool_chain.commands.entry_points:clang_new_main"
clang-tool-chain-clang-cpp = "clang_tool_chain.commands.entry_points:clang_cpp_new_main"
clang-tool-chain-zccache-clang = "clang_tool_chain.commands.entry_points:zccache_clang_main"
clang-tool-chain-zccache-clang-cpp = "clang_tool_chain.commands.entry_points:zccache_clang_cpp_main"
clang-tool-chain-em-cpp = "clang_tool_chain.commands.entry_points:empp_new_main"
clang-tool-chain-zccache-emcc = "clang_tool_chain.commands.entry_points:zccache_emcc_main"
clang-tool-chain-zccache-em-cpp = "clang_tool_chain.commands.entry_points:zccache_empp_main"
clang-tool-chain-zccache-wasm-ld = "clang_tool_chain.commands.entry_points:zccache_wasm_ld_main"
clang-tool-chain-clang-tidy = "clang_tool_chain.commands.entry_points:clang_tidy_new_main"
clang-tool-chain-zccache-clang-tidy = "clang_tool_chain.commands.entry_points:zccache_clang_tidy_main"
clang-tool-chain-zccache-iwyu = "clang_tool_chain.commands.entry_points:zccache_iwyu_main"

[tool.hatch.build.targets.wheel]
packages = ["src/clang_tool_chain"]
# Include assets directory (LLVM binaries) if it exists
# Note: assets/ should be populated before building the package
include = [
    "src/clang_tool_chain/assets/**/*",
    "src/clang_tool_chain/data/**/*",
    "src/clang_tool_chain/native_tools/**/*.cpp",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=clang_tool_chain",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "serial: mark test to run serially (not in parallel)",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Pyright configuration
[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["**/__pycache__", "build", "dist", "tests/test_archive_permissions.py"]
extraPaths = ["scripts"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportUntypedNamedTuple = false
reportPrivateUsage = false
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportUninitializedInstanceVariable = false
reportCallInDefaultInitializer = false
reportUnnecessaryIsInstance = false
reportUnnecessaryCast = false
reportUnnecessaryComparison = false
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
